syntax = "proto3";

package book;

message Book {
    string book_id = 1;
    string title = 2;
    string isbn = 3;
    string author_id = 4;
    string category_id = 5;
    string published_date = 6; 
    string description = 7; 
    string stock_id = 8;
    string created_at = 9;
    string updated_at = 10; 
}

message Stock {
    string stock_id = 1;
    string book_id = 2; 
    int32 total_quantity = 3;
    int32 available_quantity = 4;
    string created_at = 5;
    string updated_at = 6;
}

message GetBookRequest {
    string book_id = 1;
}

message GetBookResponse {
    Book book = 1;
    Stock stock = 2;
}

message GetAllBooksRequest {}

message GetAllBooksResponse {
  repeated Book books = 1;
}

service BookService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse);
}